<resources>
    <string name="app_name">mqttClient</string>

    <string name="desc" />

    <string name="home">首页</string>
    <string name="mail_list">通讯录</string>
    <string name="my">我的</string>
    <string name="ok">确定</string>
    <string name="permission_prompt">未开启应用所需要的全部权限，如果不开启将无法正常使用，是否现在开启？</string>

    <string name="http_failure_cause_network">请求失败，请检查网络连接</string>
    <string name="http_exception_cause_network">服务器出错</string>
    <string name="http_failure_cause_time_out">网络请求超时，请检查网络</string>
    <string name="http_failure">请求失败，请检查网络或稍后重试</string>

    <!--用户-->
    <string name="input_pwd">请输入您的密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="get_initiadata_fail">获取初始化信息失败</string>
    <string name="get_user_info_fail">获取个人信息失败</string>
    <string name="no_loging_record">没有登录记录</string>
    <string name="name">姓名</string>
    <string name="tv_name">姓名：</string>
    <string name="work_number">工号</string>
    <string name="tv_work_number">工号：</string>
    <string name="department">部门</string>
    <string name="phone">手机号码</string>
    <string name="phone_number">手机号</string>
    <string name="tv_phone_number">手机号：</string>
    <string name="input_work_number">请输入工号</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="input_nick_name">请输入昵称</string>
    <string name="input_passsword">请输入密码</string>
    <string name="input_confirm_password">请输入确认密码</string>
    <string name="two_password_inconsistencies">两次密码不一致</string>
    <string name="user_name">用户名</string>
    <string name="nick_name">昵称</string>
    <string name="password">密码</string>
    <string name="confirm">确认密码</string>

    <!--选择图片-->
    <string name="photograph">拍照</string>
    <string name="from_album">从相册选择</string>
    <string name="user_cancel">用户取消</string>
</resources>
