<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_theme"
    tools:context="usung.com.mqttclient.activity.ActivityLogin">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <!--用户名-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/corner_white_5"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:contentDescription="@string/desc"
                android:src="@mipmap/img_login_user" />

            <EditText
                android:id="@+id/edt_account"
                style="@style/font16_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_user_name"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColorHint="@color/grey" />

            <CheckBox
                android:id="@+id/checkB_remind_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingRight="@dimen/dp_10"
                android:button="@drawable/checkbox_remind_account" />
        </LinearLayout>
        <!--密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_white_5"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:contentDescription="@string/desc"
                android:src="@mipmap/img_login_pwd" />

            <EditText
                android:id="@+id/edt_pwd"
                style="@style/font16_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_pwd"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColorHint="@color/grey" />

            <CheckBox
                android:id="@+id/cb_pwd_visibility"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:button="@drawable/btn_login_pwd_visibility"
                android:checked="true"
                android:scaleType="centerInside" />
        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_remember_pwd"
                style="@style/MyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/dp_10"
                android:text="@string/remember_pwd" />

            <TextView
                android:id="@+id/tv_register"
                style="@style/font16_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5"
                android:layout_alignParentRight="true"
                android:text="@string/register"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/font18_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_white_5"
            android:text="@string/login" />

    </LinearLayout>

    <TextView
        style="@style/font24_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ll_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="登录界面"/>
</android.support.constraint.ConstraintLayout>
