<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="usung.com.mqttclient.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"/>

    <LinearLayout
        android:id="@+id/bottom_tab"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white">

        <!--首页-->
        <RelativeLayout
            android:id="@+id/rl_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/img_home_selected" />

            <TextView
                android:id="@+id/txt_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_home"
                android:layout_centerHorizontal="true"
                android:text="@string/home"
                android:textColor="@color/color_theme"
                android:textSize="12dp" />
        </RelativeLayout>

        <!--消息-->
        <RelativeLayout
            android:id="@+id/rl_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_message"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/img_message_unselected" />

                <TextView
                    android:id="@+id/txt_message"
                    style="@style/font12_deep_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_img_chat"
                    android:layout_centerHorizontal="true"
                    android:text="@string/mail_list" />
            </LinearLayout>

            <TextView
                android:id="@+id/unread_msg_number"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/ll_message"
                android:background="@drawable/circle_red"
                android:gravity="center"
                android:text="99"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:visibility="gone" />
        </RelativeLayout>

        <!--我的-->
        <RelativeLayout
            android:id="@+id/rl_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp">

            <ImageView
                android:id="@+id/img_my"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/img_my_unselected" />

            <TextView
                android:id="@+id/txt_my"
                style="@style/font12_deep_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_my"
                android:layout_centerInParent="true"
                android:text="@string/my" />
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
